// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `null`;

exports[`renders accepted protection request 1`] = `
<ProtectionRecoveryRequest
  requests={
    Array [
      Object {
        "addressToRecover": "toRecover",
        "createdOn": "2021-06-10T13:48:00.000Z",
        "decision": Object {
          "decisionOn": "2021-06-10T13:48:00.000Z",
          "rejectReason": null,
        },
        "id": "request1",
        "isRecovery": true,
        "legalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "otherLegalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "status": "ACCEPTED",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
        "userPostalAddress": Object {
          "city": "Liège",
          "country": "Belgium",
          "line1": "Place de le République Française, 10",
          "line2": "boite 15",
          "postalCode": "4000",
        },
      },
      Object {
        "addressToRecover": "toRecover",
        "createdOn": "2021-06-10T13:48:00.000Z",
        "decision": Object {
          "decisionOn": "2021-06-10T13:48:00.000Z",
          "rejectReason": null,
        },
        "id": "request2",
        "isRecovery": true,
        "legalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        "otherLegalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "status": "ACCEPTED",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
        "userPostalAddress": Object {
          "city": "Liège",
          "country": "Belgium",
          "line1": "Place de le République Française, 10",
          "line2": "boite 15",
          "postalCode": "4000",
        },
      },
    ]
  }
  type="accepted"
/>
`;

exports[`renders pending protection request 1`] = `
<ProtectionRecoveryRequest
  requests={
    Array [
      Object {
        "addressToRecover": "toRecover",
        "createdOn": "2021-06-10T13:48:00.000Z",
        "decision": Object {
          "decisionOn": null,
          "rejectReason": null,
        },
        "id": "request1",
        "isRecovery": true,
        "legalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "otherLegalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "status": "PENDING",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
        "userPostalAddress": Object {
          "city": "Liège",
          "country": "Belgium",
          "line1": "Place de le République Française, 10",
          "line2": "boite 15",
          "postalCode": "4000",
        },
      },
      Object {
        "addressToRecover": "toRecover",
        "createdOn": "2021-06-10T13:48:00.000Z",
        "decision": Object {
          "decisionOn": null,
          "rejectReason": null,
        },
        "id": "request2",
        "isRecovery": true,
        "legalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        "otherLegalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "status": "PENDING",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
        "userPostalAddress": Object {
          "city": "Liège",
          "country": "Belgium",
          "line1": "Place de le République Française, 10",
          "line2": "boite 15",
          "postalCode": "4000",
        },
      },
    ]
  }
  type="pending"
/>
`;

exports[`renders protected and claimed 1`] = `<RecoveryProcess />`;

exports[`renders protected but not claimed 1`] = `
<ProtectionRecoveryRequest
  requests={
    Array [
      Object {
        "addressToRecover": "toRecover",
        "createdOn": "2021-06-10T13:48:00.000Z",
        "decision": Object {
          "decisionOn": "2021-06-10T13:48:00.000Z",
          "rejectReason": null,
        },
        "id": "request1",
        "isRecovery": true,
        "legalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "otherLegalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "status": "ACTIVATED",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
        "userPostalAddress": Object {
          "city": "Liège",
          "country": "Belgium",
          "line1": "Place de le République Française, 10",
          "line2": "boite 15",
          "postalCode": "4000",
        },
      },
      Object {
        "addressToRecover": "toRecover",
        "createdOn": "2021-06-10T13:48:00.000Z",
        "decision": Object {
          "decisionOn": "2021-06-10T13:48:00.000Z",
          "rejectReason": null,
        },
        "id": "request2",
        "isRecovery": true,
        "legalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        "otherLegalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "status": "ACTIVATED",
        "userIdentity": Object {
          "email": "john.doe@logion.network",
          "firstName": "John",
          "lastName": "Doe",
          "phoneNumber": "+1234",
        },
        "userPostalAddress": Object {
          "city": "Liège",
          "country": "Belgium",
          "line1": "Place de le République Française, 10",
          "line2": "boite 15",
          "postalCode": "4000",
        },
      },
    ]
  }
  type="activated"
/>
`;
